make dev profile works with npm-deps